<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginActivity"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:hint="@string/enter_your_e_mail"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:paddingStart="10dp"
        android:background="@drawable/edit_text"
        android:textColorHint="@color/black"
        android:paddingEnd="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:id="@+id/emailET"
        android:autofillHints="" />
    <EditText
        android:hint="@string/confirm_your_password"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:paddingStart="10dp"
        android:background="@drawable/edit_text"
        android:textColorHint="@color/black"
        android:paddingEnd="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:id="@+id/passwordET"
        android:autofillHints="" />
    <Button
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_margin="20dp"
        android:id="@+id/loginBtn"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerTV"
        android:text="@string/not_a_member_register_here"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

</LinearLayout>