<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@drawable/error_background"
    android:orientation="vertical">

    <TextView

        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="@string/error"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/enter_e_mail_and_password"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="#A1515151"
        android:textSize="16sp" />


</LinearLayout>