<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.authentication.LoginActivity"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:fontFamily="@font/bold"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textSize="29sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/sign_up"
                android:textStyle="bold"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_width="0.1dp"
                app:civ_border_color="#FF000000"/>




            <EditText
                android:hint="@string/enter_your_last_name"
                android:layout_marginTop="20dp"
                android:textColor="@color/blue"
                android:paddingStart="10dp"
                android:background="@drawable/edit_text"
                android:textColorHint="@color/black"
                android:paddingEnd="10dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:id="@+id/userNameET"/>

            <EditText
                android:hint="@string/enter_your_e_mail"
                android:paddingStart="10dp"
                android:textColor="@color/blue"
                android:paddingEnd="10dp"
                android:layout_margin="20dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/emailET"
                android:textColorHint="@color/black"
                android:background="@drawable/edit_text"/>
            <EditText
                android:textColor="@color/blue"
                android:background="@drawable/edit_text"
                android:textColorHint="@color/black"
                android:hint="@string/enter_your_password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:id="@+id/passwordET"/>
            <EditText
                android:textColorHint="@color/black"
                android:textColor="@color/blue"
                android:background="@drawable/edit_text"
                android:hint="@string/confirm_your_password"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:id="@+id/repeatPasswordET"/>


            <Button
                android:fontFamily="@font/roboto_black"
                android:background="@drawable/rounded_button"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_margin="20dp"
                android:id="@+id/registerBtn"/>
        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:visibility="invisible"/>
    </FrameLayout>
</ScrollView>
